fix data science slug

--- a/pages/blog/2018-11-01-data-science-vs-analytics.mdx
+++ b/pages/blog/2018-11-01-data-science-vs-analytics.mdx
@@ -4,7 +4,7 @@ description: >-
   Data Science vs Analytics are two related disciplines in most startups. I’ve
   also heard a number of ways to describe the distinctions…
 date: "2018-11-01T15:32:20.660Z"
-tags: [product_management, "data science", "analytics"]
+tags: [product_management, "data_science", "analytics"]
 image: /images/medium-export/1__1LI9TzwDU1l6IyJFBRcULw.jpeg
 # slug: /@evantahler/data-science-vs-analytics-4b3d1ffbdf2b
 ---
