--- a/pages/blog/2012-09-10-production-deployment-with-node-js-clusters.mdx
+++ b/pages/blog/2012-09-10-production-deployment-with-node-js-clusters.mdx
@@ -60,7 +60,7 @@ api.socketServer.gracefulShutdown = function (api, next, alreadyShutdown) {
     api.log(
       "[socket] waiting on shutdown, there are still " +
         api.socketServer.connections.length +
-        " connected clients waiting on a response"
+        " connected clients waiting on a response",
     );
     setTimeout(function () {
       api.socketServer.gracefulShutdown(api, next, alreadyShutdown);
