--- a/pages/blog/2020-02-18-production-node-applications-with-docker.mdx
+++ b/pages/blog/2020-02-18-production-node-applications-with-docker.mdx
@@ -105,7 +105,7 @@ function awaitHardStop() {
 
   return setTimeout(() => {
     console.error(
-      `Process did not terminate within ${timeout}ms. Stopping now!`
+      `Process did not terminate within ${timeout}ms. Stopping now!`,
     );
     process.nextTick(process.exit(1));
   }, timeout);
