--- a/pages/blog/2012-02-15-pivotal-tracker-and-nerf-guns.mdx
+++ b/pages/blog/2012-02-15-pivotal-tracker-and-nerf-guns.mdx
@@ -98,7 +98,7 @@ var init = function (next) {
           }
           if (found == false) {
             console.log(
-              "This user does not have access to project #" + projectID
+              "This user does not have access to project #" + projectID,
             );
             process.exit();
           } else {
@@ -107,7 +107,7 @@ var init = function (next) {
           }
         }
       });
-    }
+    },
   );
 };
 
@@ -143,7 +143,7 @@ var checkForTrackerStatus = function () {
                   }
                 }
               }
-            }
+            },
           );
         }
         newer_than_version = activities.activity.version;
