--- a/pages/blog/2023-06-01-airbyte-checkpointing.mdx
+++ b/pages/blog/2023-06-01-airbyte-checkpointing.mdx
@@ -4,7 +4,7 @@ date: "2023-06-01"
 author: "Evan Tahler"
 description: "Airbyte Checkpointing: Ensuring Uninterrupted Data Syncs"
 image: "/images/posts/2023-06-01-airbyte-checkpointing/image.jpg"
-tags: [engineering, airbyte]
+tags: [engineering, airbyte, data, data-engineering]
 canonical: https://airbyte.com/blog/checkpointing
 ---
 
