--- a/pages/blog/2024-04-04-announcing-record-change-history.mdx
+++ b/pages/blog/2024-04-04-announcing-record-change-history.mdx
@@ -4,7 +4,7 @@ date: "2024-04-04"
 author: "Evan Tahler"
 description: "Don't stop syncing just because your data is bad."
 image: "/images/posts/2024-04-04-announcing-record-change-history/image-1.png"
-tags: [engineering, airbyte]
+tags: [engineering, airbyte, data, data-engineering]
 canonical: https://airbyte.com/blog/record-change-history
 ---
 
