--- a/pages/blog/2024-04-17-cost-conscious-elt-strategies.mdx
+++ b/pages/blog/2024-04-17-cost-conscious-elt-strategies.mdx
@@ -4,7 +4,7 @@ date: "2024-04-17"
 author: "Evan Tahler"
 description: "Saving money while moving data"
 image: "/images/posts/2024-04-17-cost-conscious-elt-strategies/image-1.png"
-tags: [engineering, airbyte]
+tags: [engineering, airbyte, data, data-engineering]
 canonical: https://airbyte.com/blog/cost-conscious-advanced-elt-strategies-for-data-deduplication
 ---
 
