--- a/pages/blog/2024-10-31-choose-a-database-with-hybrid-vector-search-for-your-ai-applications.mdx
+++ b/pages/blog/2024-10-31-choose-a-database-with-hybrid-vector-search-for-your-ai-applications.mdx
@@ -4,7 +4,7 @@ date: "2024-10-31"
 author: "Evan Tahler"
 description: "RAG needs a database"
 image: "/images/posts/2024-10-31-choose-a-database-with-hybrid-vector-search-for-your-ai-applications/image-1.png"
-tags: [engineering, airbyte]
+tags: [engineering, airbyte, data, data-engineering, ai, llm, rag]
 canonical: https://airbyte.com/blog/choose-a-database-with-hybrid-vector-search-for-your-ai-applications
 ---
 
