--- a/pages/blog/2023-08-29-introducing-airbyte-destinations-v2.mdx
+++ b/pages/blog/2023-08-29-introducing-airbyte-destinations-v2.mdx
@@ -4,7 +4,7 @@ date: "2023-08-29"
 author: "Evan Tahler"
 description: "Making Database destinations faster better, and stronger"
 image: "/images/posts/2023-08-29-introducing-airbyte-destinations-v2/image-1.png"
-tags: [engineering, airbyte]
+tags: [engineering, airbyte, data, data-engineering]
 canonical: https://airbyte.com/blog/introducing-airbyte-destinations-v2-typing-deduping
 ---
 
