--- a/pages/blog/2025-01-15-the-components-of-an-ai-data-pipeline.mdx
+++ b/pages/blog/2025-01-15-the-components-of-an-ai-data-pipeline.mdx
@@ -6,6 +6,7 @@ description: "The ELT/ETL for AI"
 image: "/images/posts/2025-01-15-the-components-of-an-ai-data-pipeline/image-1.png"
 tags: [engineering, airbyte, data, data-engineering, ai, llm, rag]
 canonical: https://airbyte.com/blog/the-components-of-an-ai-context-pipeline
+featured: true
 ---
 
 <Image
