--- a/pages/blog/2012-01-21-life-manifesto-2012.mdx
+++ b/pages/blog/2012-01-21-life-manifesto-2012.mdx
@@ -18,7 +18,7 @@ Writing this type of document was incredibly hard, even though it turned out to 
 - **Life**: If it makes a good story, it was worth it.
 - **Religion**: I am fairly certain life is a "The Sims" game and God got bored a long time ago.
 - **_Politics_**_:_ If I could pass one law, it would be to make it illegal for any politician to mention religion.
-- **_The Secret of Life_** *:* Have fun first and if there is time, leave the world a better place than you found it. There will be time.
+- ***The Secret of Life*** *:* Have fun first and if there is time, leave the world a better place than you found it. There will be time.
 - **Education**: The best weapon we have to fight ignorance and intolerance is education. You can’t change the current generation, but you can steal the future right out from under them.
 - **Food**: I am on top of the food chain, so I’ll act that way.
 - **Piracy**: People pirate because the content was too hard to obtain & use legally, not because I want the artist to starve.
